# kirby-turbo

./: .gitattributes  .gitignore  LICENSE  README.md  composer.json  index.php  phpstan.neon.dist  readme.md
.github/workflows/: pest-tests.yml  phpstan.yml
classes/: AbortCachingException.php  ModelWithTurbo.php  PreloadRedisCache.php  ServerTiming.php  Turbo.php  TurboDir.php  TurboFile.php  TurboFileCache.php  TurboLicense.php  TurboPage.php  TurboRedisCache.php  TurboStaticCache.php  TurboStopwatch.php  TurboStorage.php  TurboUuidCache.php  TurboValue.php
stubs/: model.php
tests/: TurboTest.php  index.php
tests/content/: site.txt
tests/content/actor/: actors.txt
tests/content/address/: addresses.txt
tests/content/category/: categories.txt
tests/content/city/: cities.txt
tests/content/country/: countries.txt
tests/content/customer/: customers.txt
tests/content/film/: films.txt
tests/content/home/: home.txt
tests/content/inventory/: inventories.txt
tests/content/rental/: rentals.txt
tests/content/store/: stores.txt
tests/site/blueprints/: site.yml
tests/site/collections/: films.php
tests/site/config/: config.php
tests/site/models/: actor.php  actors.php  address.php  addresses.php  categories.php  category.php  cities.php  city.php  countries.php  country.php  customer.php  customers.php  default.php  film.php  films.php  inventories.php  inventory.php  rental.php  rentals.php  store.php  stores.php
tests/site/snippets/: list.php  stats.php
tests/site/templates/: all.php  default.php  (+2 more)
turbo/: Cargo.toml
turbo/src/: main.rs
(+23759 files in other folders)
