[package]
name = "turbo"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.42.0", features = ["rt", "rt-multi-thread", "macros", "fs", "time", "sync"] }
futures = "0.3.31"
ignore = "0.4.23"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
num_cpus = "1.16.0"
xxhash-rust = { version = "0.8.12", features = ["xxh3"] }
